crates/lang/tests/ui/trait_def/fail/definition_super_trait_invalid_1.rs
use ink_lang as ink;

pub trait SuperTraitDefinition {}

#[ink::trait_definition]
pub trait TraitDefinition: SuperTraitDefinition {
    #[ink(message)]
    fn message(&self);
}

fn main() {}
